# translate

./: AGENTS.md  Cargo.toml  prd.md  qa.md  run-en.sh  run-zh.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
TASK/: TASK-DEV-001.md  TASK-DEV-002.md  TASK-DEV-003.md  TASK-QA-001.md  TASK-QA-002.md  TASK-QA-003.md
TASK/delivery/: DELIVERY-001.md  DELIVERY-002.md  DELIVERY-003.md
TASK/reports/: QA-REPORT-001-r1.md  QA-REPORT-002-r1.md  QA-REPORT-003-r1.md  QA-REPORT-003-r2.md
crates/audio-core/: Cargo.toml
crates/audio-core/src/: backend.rs  frame.rs  lib.rs  ring.rs
crates/audio-cpal/: Cargo.toml
crates/audio-cpal/src/: lib.rs
crates/audio-dsp/: Cargo.toml
crates/audio-dsp/src/: lib.rs  resample.rs  vad.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/device-manager/: Cargo.toml
crates/device-manager/src/: classify.rs  lib.rs  manager.rs  snapshot.rs  watch.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: isolation.rs  lib.rs  loopcheck.rs  meter.rs
crates/engine/: Cargo.toml
crates/engine/src/: control.rs  lib.rs  link.rs  orchestrator.rs  route.rs
crates/gemini-live/: Cargo.toml
crates/gemini-live/examples/: smoke.rs
crates/gemini-live/src/: codec.rs  lib.rs  protocol.rs  session.rs
crates/gemini-live/tests/: session_mock.rs
docs/superpowers/notes/: M1-validation.md  M2-validation-guide.md  M2-validation.md  dev-setup-mac.md
docs/superpowers/plans/: 2026-06-13-m0-foundation-m1-gemini-link.md  2026-06-16-m2-bidirectional-devices.md
docs/superpowers/specs/: 2026-06-13-realtime-voice-translation-design.md
