[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
audio-core = { path = "../audio-core" }
audio-cpal = { path = "../audio-cpal" }
audio-dsp = { path = "../audio-dsp" }
gemini-live = { path = "../gemini-live" }
engine = { path = "../engine" }
device-manager = { path = "../device-manager" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
