[package]
name = "gemini-live"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
audio-core = { path = "../audio-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
